--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 FOOTBALL_API_KEY=your_football_data_org_api_key_here
-CRON_SECRET=your_random_secret_string_here
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+CRON_SECRET=any_random_secret_string
